# openlogo

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  debug_output.txt  pyproject.toml  results_city_map.json  setup.py  supabase_setup.sql  supabase_setup_simple.sql  supabase_storage_setup.md  supabase_test.py  test_city_map.py  test_city_map_crawler.py  test_logo_crawler.py
.github/workflows/: release.yml  test.yml
docs/: REFACTOR_PLAN_v0.3.0.md  v0.3.0_REFACTOR_SUMMARY.md
docs/archive/: ARCHITECTURE_DECISION.md  FUNCTIONALITY_TEST_REPORT.md  OPEN_SOURCE_READY_SUMMARY.md  SIMPLIFICATION_SUMMARY.md  TEST_REPORT.md
examples/: basic_usage.py
fede_crawl4ai/: __init__.py  config.py  logo_crawler.py  logo_detection.py  models.py  protocols.py
fede_crawl4ai/analyzers/: __init__.py  azure_analyzer.py  base.py  openai_analyzer.py
fede_crawl4ai/processors/: __init__.py  crawler.py  ranker.py
src/crawl4logo/: __init__.py  crawler.py  detection.py
src/openlogo/: __init__.py  crawler.py  detection.py
tests/: __init__.py  conftest.py  test_logo_crawler.py
tests/integration/: test_openai_integration.py
tests/unit/: test_logo_crawler.py  test_models.py
tests/unit/analyzers/: test_azure_analyzer.py  test_base.py  test_openai_analyzer.py
tests/unit/processors/: test_crawler.py  test_ranker.py
