[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawl4logo"
version = "0.1.4"
description = "A web crawler for logo detection using GPT-4o-mini vision capabilities"
authors = [
    {name = "Federico De Ponte", email = "federico.deponte@gmail.com"},
]
license = {text = "MIT"}
keywords = ["logo", "detection", "crawler", "web-scraping", "openai", "gpt-4o-mini", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.9.3",
    "Pillow>=8.0.0",
    "pydantic>=1.8.0",
    "rich>=10.0.0",
    "cairosvg>=2.7.0",
]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/federicodeponte/crawl4logo"
Issues = "https://github.com/federicodeponte/crawl4logo/issues"
Repository = "https://github.com/federicodeponte/crawl4logo"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fede_crawl4ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --cov=fede_crawl4ai --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false 